feat(api): added API routes with express, custom error handling (basic) and minor changes

--- a/turbo.json
+++ b/turbo.json
@@ -16,6 +16,9 @@
     "db:migrate": {
       "cache": false
     },
+    "db:init": {
+      "cache": false
+    },
     "build": {
       "dependsOn": ["^build", "^db:generate"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
