--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -6,7 +6,8 @@
     "db:stop": "docker compose down",
     "db:seed": "tsx ./src/seed.ts",
     "db:generate": "prisma generate",
-    "db:migrate": "prisma db push --skip-generate"
+    "db:migrate": "prisma db push --skip-generate",
+    "db:init": "pnpm exec turbo db:start && pnpm exec turbo db:migrate && pnpm exec turbo db:seed"
   },
   "dependencies": {
     "@prisma/client": "5.19.0"
