--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -10,12 +10,19 @@
     "start": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.54.1",
+    "@tanstack/react-router": "^1.53.1",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@tanstack/eslint-plugin-query": "^5.53.0",
+    "@tanstack/router-devtools": "^1.53.1",
+    "@tanstack/router-plugin": "^1.54.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -24,10 +31,10 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
-    "typescript": "^5.3.3",
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
     "tailwindcss": "^3.4.4",
+    "typescript": "^5.3.3",
     "vite": "^5.3.1"
   }
 }
