--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@store-front-typescript-bootcamp/schemas": "workspace:*",
     "@types/body-parser": "^1.19.5",
     "@types/cors": "2.8.17",
     "@types/express": "^4.17.21",
