--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@store-front-typescript-bootcamp/db",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "scripts": {
     "db:start": "docker compose up -d",
     "db:stop": "docker compose down",
     "db:seed": "tsx ./src/seed.ts",
     "db:generate": "prisma generate",
     "db:migrate": "prisma db push --skip-generate",
-    "db:init": "pnpm exec turbo db:start && pnpm exec turbo db:migrate && pnpm exec turbo db:seed"
+    "db:init": "pnpm exec turbo db:start && pnpm exec turbo db:migrate"
   },
   "dependencies": {
     "@prisma/client": "5.19.0"
