--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
       "target": "es6",
-      "module": "commonjs",
+      "module": "Node16",
       "lib": ["es6", "dom"],
       "types": ["node"], 
       "esModuleInterop": true,
@@ -9,7 +9,7 @@
       "forceConsistentCasingInFileNames": true,
       "strict": true,
       "noImplicitAny": false,
-      "moduleResolution": "node",
+      "moduleResolution": "Node16",
       "resolveJsonModule": true
     },
     "include": ["**/*.ts"],
