--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.54.1",
     "@tanstack/react-router": "^1.53.1",
+    "@store-front-typescript-bootcamp/schemas": "workspace:*",
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
