feat(search): added logic for search and filtering

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -14,7 +14,8 @@
     "@store-front-typescript-bootcamp/schemas": "workspace:*",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "qs": "^6.13.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
