--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -10,13 +10,15 @@
     "start": "vite preview"
   },
   "dependencies": {
+    "@store-front-typescript-bootcamp/schemas": "workspace:*",
     "@tanstack/react-query": "^5.54.1",
     "@tanstack/react-router": "^1.53.1",
-    "@store-front-typescript-bootcamp/schemas": "workspace:*",
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
@@ -26,6 +28,7 @@
     "@tanstack/router-plugin": "^1.54.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-slick": "^0.23.13",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
