--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -10,12 +10,15 @@
     "start": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.1",
     "@store-front-typescript-bootcamp/schemas": "workspace:*",
     "@tanstack/react-query": "^5.54.1",
     "@tanstack/react-router": "^1.53.1",
     "axios": "^1.7.7",
+    "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1"
