feat(unit-test): added unit test for client and server apps and all needed configs/dependencies

--- a/turbo.json
+++ b/turbo.json
@@ -24,6 +24,7 @@
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
       "outputs": ["dist/**"]
     },
+    "test": {},
     "lint": {
       "dependsOn": ["^lint"]
     },
