--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -7,7 +7,8 @@
     "dev": "vite --clearScreen false",
     "build": "tsc && vite build",
     "lint": "eslint .",
-    "start": "vite preview"
+    "start": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
@@ -23,20 +24,32 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
-    "@repo/eslint-config": "workspace:*",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
+    "@jest/globals": "^29.7.0",
+    "@repo/eslint-config": "workspace:^",
     "@repo/typescript-config": "workspace:*",
     "@tanstack/eslint-plugin-query": "^5.53.0",
     "@tanstack/router-devtools": "^1.53.1",
     "@tanstack/router-plugin": "^1.54.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "@types/jest": "^29.5.13",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-slick": "^0.23.13",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
     "tailwindcss": "^3.4.4",
