test: added more test cases and modified the playwright config file to be able to run headless brwsr

--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -29,8 +29,8 @@
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
     "@jest/globals": "^29.7.0",
-    "@repo/eslint-config": "workspace:^",
-    "@repo/typescript-config": "workspace:*",
+    "@store-front-typescript-bootcamp/eslint-config": "workspace:^",
+    "@store-front-typescript-bootcamp/typescript-config": "workspace:*",
     "@tanstack/eslint-plugin-query": "^5.53.0",
     "@tanstack/router-devtools": "^1.53.1",
     "@tanstack/router-plugin": "^1.54.0",
