--- a/packages/config-typescript/package.json
+++ b/packages/config-typescript/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/typescript-config",
+  "name": "@store-front-typescript-bootcamp/typescript-config",
   "version": "0.0.0",
   "private": true,
   "license": "MIT",
