--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -22,8 +22,8 @@
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-typescript": "^7.24.7",
     "@jest/globals": "^29.7.0",
-    "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
+    "@store-front-typescript-bootcamp/eslint-config": "workspace:*",
+    "@store-front-typescript-bootcamp/typescript-config": "workspace:*",
     "@types/body-parser": "^1.19.5",
     "@types/cors": "2.8.17",
     "@types/express": "^4.17.21",
